--- a/1-practica-cloud-inventario-rest/src/main/resources/application.properties
+++ b/1-practica-cloud-inventario-rest/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.application.name=practica-cloud-inventario-rest
+server.port=8000
+spring.jpa.show-sql=true
+#consola de administracion para  H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
