--- a/1-practica-cloud-compra-rest/pom.xml
+++ b/1-practica-cloud-compra-rest/pom.xml
@@ -44,6 +44,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.cloud</groupId>
+   		 	<artifactId>spring-cloud-starter-openfeign</artifactId>
+    		<version>2.1.3.RELEASE</version>
+		</dependency>
+		<dependency>
+   		 <groupId>org.springframework.cloud</groupId>
+   		 <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+  		  <version>2.1.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
