Agregué instancias en bootstrap properties

--- a/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
+++ b/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
@@ -5,4 +5,5 @@ spring.cloud.config.url=http://localhost:8888
 spring.profiles.active=dev
 #Habilita más endpoints para conocer el estado del microservicio
 management.endpoints.web.exposure.include=*
+inventario-service.ribbon.listOfServers=http://192.168.5.52:8080,http://192.168.5.52:8081,http://192.168.5.52:8082,http://192.168.5.52:8083
 
