--- a/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
+++ b/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
@@ -1,9 +1,11 @@
-server.port=8100
+server.port=8080
 spring.application.name=config
-spring.cloud.config.url=http://localhost:8888
+#ip del server
+spring.cloud.config.url=http://192.168.5.129:8080 
 #Nombre de la aplicación debe coincidir con el nombre del archivo de github
 spring.profiles.active=dev
 #Habilita más endpoints para conocer el estado del microservicio
 management.endpoints.web.exposure.include=*
+#ip del inventario
 inventario-service.ribbon.listOfServers=http://192.168.5.52:8080,http://192.168.5.52:8081,http://192.168.5.52:8082,http://192.168.5.52:8083
 
