--- a/2-practica-cloud-inventario-rest/src/main/resources/application.properties
+++ b/2-practica-cloud-inventario-rest/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.application.name=practica-cloud-inventario-rest
 server.port=8000
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.5.207:3306/mydb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=tecguru$
 spring.datasource.diver-class=com.mysql.cj.jdbc.Driver
