Medio arregle el problema de return compra.

--- a/2-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
+++ b/2-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 server.port=8100
-spring.datasource.url=jdbc:mysql://192.168.5.207:3306/mydb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=tecguru$
 spring.datasource.diver-class=com.mysql.cj.jdbc.Driver
@@ -10,7 +10,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.application.name=config
 #ip del server
-spring.cloud.config.url=http://192.168.5.129:8080 
+spring.cloud.config.url=http://localhost:8080 
 #Nombre de la aplicación debe coincidir con el nombre del archivo de github
 spring.profiles.active=dev
 #Habilita más endpoints para conocer el estado del microservicio
